--- a/style.css
+++ b/style.css
@@ -201,3 +201,73 @@ header {
     flex: 0 1 100%;
 }
 
+/*
+Zone de recherche
+*/
+
+.zoneDeRecherche h1 {
+    margin: 15px 0 0 0;
+    display: flex;
+    flex-direction: column;
+}
+
+form.recherche button[type="none"] {
+    background: #F2F2F2;
+    border: 1px #F2F2F2 solid;
+    padding: 5px 15px;
+    font-size: 20px;
+    border-radius: 15px 0 0 15px;
+    padding-top: 7px;
+    padding-bottom: 10px;
+    cursor: pointer;
+}
+
+form.recherche button[type="submit"] {
+    display: flex;
+    background: #0065FC;
+    border: 1px #0065FC solid;
+    border-radius: 0 15px 15px 0;
+    color: #FFF;
+    height: 43px;
+    padding: 0px 15px;
+    cursor: pointer;
+}
+
+@media (max-width:640px) {
+    form.recherche button[type="submit"] {
+        border-radius: 15px 15px 15px 15px !important;
+        margin-left: -15px !important;
+    }
+}
+
+@media (max-width:640px) {
+    p.textbtn {
+        display: none;
+    }
+}
+
+@media (min-width:640px) {
+    p.textbtn2 {
+        display: none;
+    }
+}
+
+form.recherche {
+    display: flex;
+    text-align: inherit;
+}
+
+@media (max-width:640px) {
+    form.recherche {
+        display: flex;
+        text-align: center !important;
+    }
+}
+
+form.recherche input {
+    background: transparent;
+    border: 1px #F2F2F2 solid;
+    padding: 11px 5vw;
+    margin-left: -4px;
+    height: 20px;
+}
