--- a/style.css
+++ b/style.css
@@ -271,3 +271,96 @@ form.recherche input {
     margin-left: -4px;
     height: 20px;
 }
+/*
+Filtres
+*/
+
+.boutonfiltre p {
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.filtres {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 0;
+}
+
+.filtres,
+.filtres .content {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.filtres .title {
+    margin-bottom: 20px;
+    padding-top: inherit;
+    padding-right: 20px;
+}
+
+.filtres .boutonfiltre {
+    display: flex;
+    justify-content: space-between;
+    border-radius: 200px;
+    border: 2px #F2F2F2 solid;
+    height: 50px;
+    position: relative;
+    padding-left: 55px;
+    padding-right: 14px;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    transition: transform .2s;
+    cursor: pointer;
+}
+
+.filtres .boutonfiltre:hover {
+    transform: scale(1.05);
+}
+
+.filtres .boutonfiltre:first-child {
+    margin-left: 0;
+}
+
+.filtres .boutonfiltre:last-child {
+    margin-right: 0;
+}
+
+.filtres .boutonfiltre i {
+    line-height: 50px;
+    color: #0065FC;
+    position: absolute;
+    width: 50px;
+    text-align: center;
+    background: #DEEBFF;
+    left: -2px;
+    border-radius: 100%;
+}
+
+.boutonfiltre p {
+    margin: auto;
+}
+
+.nombrelogementstxt {
+    padding: 5px 0;
+    display: inline-flex;
+}
+
+.nombrelogementstxt i {
+    border: 2px solid #F2F2F2;
+    width: 29px;
+    line-height: 25px;
+    font-size: 14px;
+    color: #0065FC;
+    text-align: center;
+    border-radius: 100%;
+    margin-right: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 29px;
+}
+
+p.NbLogements {
+    margin: auto;
+    padding-left: 3px;
+}
