--- a/style.css
+++ b/style.css
@@ -364,3 +364,171 @@ p.NbLogements {
     margin: auto;
     padding-left: 3px;
 }
+/* main & body */
+
+
+/* hebergemennts */
+
+.LesPlusPopulaires .etoilesnote {
+    position: absolute;
+    bottom: 5%;
+}
+
+figure:hover {
+    transform: scale(1.02);
+}
+
+.item:hover {
+    transform: scale(1.02);
+}
+
+.reservation.container {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+#hebergement .hebergementsClassiques {
+    order: 1;
+    flex: 1;
+    margin-right: 3%;
+}
+
+@media (max-width:640px) {
+    #hebergement .hebergementsClassiques {
+        order: 1;
+        flex: 1;
+        margin-right: 0%;
+    }
+}
+
+#hebergement .LesPlusPopulaires {
+    order: 2;
+    flex: 0 1 35%;
+}
+
+@media (max-width:640px) {
+    #hebergement .LesPlusPopulaires {
+        order: 0;
+        flex: 0 1 100%;
+    }
+}
+
+#hebergement .fondgris {
+    background: #F2F2F2;
+    border-radius: 20px;
+    padding: 30px 25px;
+    min-height: 519px;
+    margin-bottom: 20px;
+}
+
+@media (max-width:640px) {
+    #hebergement .fondgris {
+        background: #F2F2F2;
+        border-radius: 0px !important;
+        padding: 30px 25px;
+        min-height: 519px;
+        margin-bottom: 0px;
+    }
+}
+
+#hebergement .fondgris .group-item {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border-radius: 20px;
+}
+
+@media (max-width:640px) {
+    #hebergement .fondgris .group-item {
+        flex-direction: column;
+    }
+}
+
+@media (max-width:640px) {
+    .hebergementsClassiques .fondgris {
+        background: white !important;
+    }
+}
+
+@media (max-width:640px) {
+    #hebergement .fondgris {
+        flex-direction: column;
+    }
+}
+
+#hebergement .fondgris .group-item figure {
+    width: calc(100% / 3.3);
+    background: #FFF;
+    padding: 0.3rem;
+    border-radius: 1.25rem;
+    margin: 0 0 30px 0;
+    box-shadow: 0px 0px 10px #55555538;
+    cursor: pointer;
+    transition: transform .2s;
+}
+
+@media (max-width:640px) {
+    #hebergement .fondgris .group-item figure {
+        transform: scale(1.05);
+        width: auto;
+    }
+}
+
+#hebergement .fondgris .group-item figure figcaption {
+    padding: 10px;
+    position: relative;
+}
+
+#hebergement .fondgris .group-item figure figcaption p {
+    margin: 0;
+}
+
+#hebergement .fondgris .group-item figure figcaption p:first-child {
+    font-size: 14px;
+}
+
+#hebergement .fondgris .group-item figure figcaption p:nth-child(2) {
+    font-size: 12px;
+    margin: 5px 0;
+}
+
+#hebergement .fondgris .group-item figure figcaption i {
+    color: #0065FC;
+    font-size: 12px;
+}
+
+#hebergement .fondgris .group-item figure img {
+    height: 7rem;
+    object-fit: cover;
+    max-width: 100%;
+    width: 100%;
+    max-height: 100%;
+    border-radius: 1rem 1rem 0 0;
+}
+
+#hebergement .LesPlusPopulaires .group-item {
+    flex-direction: column;
+}
+
+#hebergement .LesPlusPopulaires .group-item figure {
+    width: auto;
+    display: flex;
+    flex-direction: row;
+}
+
+#hebergement .LesPlusPopulaires .group-item figure img {
+    max-width: 100px;
+    max-height: initial;
+    height: 115px;
+    border-radius: 20px 0 0 20px;
+}
+
+#hebergement h1,
+#hebergement .stonk {
+    display: flex;
+    justify-content: space-between;
+}
+
+#hebergement h1 i {
+    margin: auto 0;
+}
