--- a/style.css
+++ b/style.css
@@ -532,3 +532,163 @@ figure:hover {
 #hebergement h1 i {
     margin: auto 0;
 }
+
+/* Activités à Marseille */
+
+.txtActiviteVille {
+    padding: 0px 0px 0px 20px;
+}
+
+.txtActivite {
+    padding: 0px 0px 0px 20px;
+}
+
+.activiteContainer .fondgris h1 {
+    margin-left: 25px;
+}
+
+.activiteContainer .flex-container {
+    list-style: none;
+    display: flex;
+    flex-flow: row wrap;
+    padding: 15px 15px;
+}
+
+#ActiviteAMarseille {
+    width: 70%;
+    margin-right: 25px;
+}
+
+#ActiviteAMarseille .fondgris {
+    width: 35%;
+}
+
+#ActiviteAMarseille {
+    display: flex
+}
+
+#activites ul {
+    list-style: none;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+#activites ul li {
+    padding: 3px;
+    background: #FFF;
+    border-radius: 20px;
+    margin: 0 0 30px 0;
+    -webkit-box-shadow: 0 5px 40px -20px rgba(0, 0, 0, .75);
+    -moz-box-shadow: 0 5px 40px -20px rgba(0, 0, 0, .75);
+    box-shadow: 0 5px 40px -20px rgba(0, 0, 0, .75);
+}
+
+#activites ul li img {
+    height: 100%;
+    max-height: 100px;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
+}
+
+@media(min-width: 991px) {
+    #activites .group-item {
+        width: 50%;
+        display: flex;
+    }
+    #activites .group-item .columndouble,
+    #activites .group-item .column {
+        max-width: 45%;
+        min-width: 45%;
+        margin: auto;
+    }
+    #activites .group-item .column,
+    #activites .group-item .column .item {
+        height: 100%;
+    }
+    #activites .group-item .column .item .activiteimg,
+    #activites .group-item .column .item .activiteimg img {
+        height: 80%;
+        max-height: initial;
+        height: 92%;
+        margin-bottom: -9%;
+    }
+}
+
+#activites .group-item .column {
+    display: flex;
+    flex-direction: column;
+    order: 1;
+    flex: 1;
+}
+
+#activites .group-item .columndouble {
+    display: flex;
+    flex-direction: column;
+    order: 2;
+    flex: 0 1 35%;
+}
+
+#activites .group-item .item {
+    width: 100%;
+    background: #FFF;
+    border-radius: 20px;
+    margin: 0 0 30px 0;
+    -webkit-box-shadow: 0 5px 40px -20px rgba(0, 0, 0, .75);
+    -moz-box-shadow: 0 5px 40px -20px rgba(0, 0, 0, .75);
+    box-shadow: 0 5px 40px -20px rgba(0, 0, 0, .75);
+    cursor: pointer;
+    transition: transform .2s;
+}
+
+#activites .group-item .item:hover {
+    transform: scale(1.05);
+}
+
+#activites .group-item .item img {
+    height: 100%;
+    max-height: 100px;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
+}
+
+
+/* footer */
+
+footer {
+    background-color: #F2F2F2;
+    bottom: 0;
+    border-top: 0;
+    position: inherit;
+    justify-content: space-around;
+    display: flex;
+}
+
+@media (max-width:640px) {
+    footer {
+        flex-flow: row wrap;
+    }
+}
+
+.bloc-footer {
+    padding: 20px;
+    width: 100%;
+    padding-left: 10%;
+}
+
+ul.liste {
+    color: #464646;
+    padding: 0;
+    line-height: 2rem;
+}
+
+#footer .bloc-footer .liste {
+    flex-shrink: 1;
+    list-style: none;
+}
+
+#footer a li {
+    text-decoration: none;
+    color: black;
+}
